--- a/res/main.css
+++ b/res/main.css
@@ -54,6 +54,7 @@
 	padding: 0 0 0 48px;
 	width: 100%;
 	height: 100%;
+	box-sizing: border-box;
 }
 .content-wrapper .navbar {
 	width: 100%;
@@ -66,4 +67,31 @@
 .content-wrapper .content {
 	height: 100%;
 	padding: 48px 0 0 0;
+}
+
+.navbar .navbar-title {
+	font-size: 16px;
+	line-height: 48px;
+	padding: 0 0 0 12px;
+}
+
+.navbar .navbar-btn {
+	font-size: 24px;
+	line-height: 48px;
+	height: 48px;
+	width: 48px;
+	text-align: center;
+	display: inline-block;
+}
+
+.pull-right {
+	top: 0;
+	right: 0;
+	height: 100%;
+	position: absolute;
+}
+
+.hide {
+	display: none;
+	visible: false;
 }
