--- a/res/ui.css
+++ b/res/ui.css
@@ -187,8 +187,17 @@
 .folder-list .folder-list-item .info .name {
 	width: 190px;
 }
+.folder-info-box {
+	margin: 0 0 10px 0;
+}
+.folder-info-box-name {
+	font-size: 18px;
+}
+.folder-info-box-path {
+	color: #888;
+}
 .alert {
-	top: 70px;
+	top: 20px;
 	right: 20px;
 	position: absolute;
 	padding: 10px;
@@ -227,18 +236,4 @@ textview {
 	background-color: #fff;
 	width: 100%;
 	height: 100%;
-}
-.test-box-1 {
-	padding: 50px;
-	width: 600px;
-	height: 600px;
-	background-color: #fafafa;
-	border: 1px solid #ddd;
-}
-.test-box-2 {
-	padding: 50px;
-	width: 200px;
-	height: 200px;
-	background-color: #ffaaaa;
-	border: 1px solid #ddd;
 }
