--- a/res/ui.css
+++ b/res/ui.css
@@ -149,6 +149,9 @@
 .source-list .source-list-item .text {
 	display: inline-block;
 }
+.file-list {
+	width: 100%;
+}
 .file-list .file-list-item-folder {
 	width: 300px;
 	height: 134px;
@@ -192,19 +195,17 @@
 	width: 226px;
 	display: inline-block;
 	border: 1px solid #eee;
+	background-position: top center;
+	background-size: cover;
 }
 .full-height {
 	height: 100%;
-}
-.view-content {
-border: 1px solid #f00;
 }
 .folder-info-box {
 	top: 50px;
 	width: 100%;
 	display: none;
 	position: absolute;
-	background-color: #fff;
 }
 .folder-info-box-name {
 	font-size: 18px;
@@ -213,7 +214,7 @@ border: 1px solid #f00;
 	color: #888;
 }
 .show-folder-info-box .view-body {
-	padding-top: 120px;
+	padding-top: 130px;
 }
 .show-folder-info-box .view-content {
 	padding-top: 10px;
@@ -223,7 +224,7 @@ border: 1px solid #f00;
 	padding: 5px 15px;
 }
 .alert {
-	top: 20px;
+	top: 60px;
 	right: 20px;
 	position: absolute;
 	padding: 10px;
