--- a/res/ui.css
+++ b/res/ui.css
@@ -156,7 +156,9 @@
 	width: 300px;
 	height: 134px;
 	display: inline-block;
+	background-size: cover;
 	background-color: #f0f0f0;
+	background-position: top center;
 	margin: 0 10px 10px 0;
 	border: 1px solid #eee;
 }
@@ -166,7 +168,7 @@
 	width: 100%;
 	height: 54px;
 	position: absolute;
-	background-color: #fff;
+	background-color: rgba(255,255,255,0.85);
 	border-top: 1px solid #eee;
 	padding: 10px 50px 10px 10px;
 	box-sizing: border-box;
