添加首页集锦视图

--- a/res/ui.css
+++ b/res/ui.css
@@ -16,6 +16,9 @@
 	width: 256px;
 	padding: 8px 0;
 }
+.sidebar .sidebar-header {
+	width: 256px;
+}
 .sidebar sidebar-toggle {
 	padding: 8px 0;
 	display: inline-block;
@@ -31,6 +34,7 @@
 .sidebar .sidebar-title {
 	font-size: 20px;
 	line-height: 48px;
+	display: inline-block;
 }
 .sidebar .sidebar-item .icon,
 .sidebar sidebar-toggle .icon {
@@ -205,7 +209,7 @@
 .file-list .divider {
 	width: 100%;
 	display: block;
-	height: 20px;
+	height: 10px;
 }
 .hide-path .info .path {
 	display: none;
