--- a/res/ui.css
+++ b/res/ui.css
@@ -120,38 +120,39 @@
 }
 .source-list .source-list-item {
 	width: 340px;
+	padding: 8px 0;
 }
 .source-list .source-list-item .text {
 	width: 240px;
+	display: inline-block;
+	vertical-align: middle;
+	line-height: 20px;
 }
 .source-list .source-list-item:hover {
-	background-color: #fcfcfc;
+	background-color: #fafafa;
 }
 .source-list .source-list-item .btn-delete {
-	top: 0;
+	top: 8px;
 	right: 0;
 	width: 48px;
-	height: 100%;
-	position: absolute;
+	height: 48px;
+	line-height: 48px;
 	text-align: center;
+	position: absolute;
+	vertical-align: middle;
 }
 .source-list .source-list-item .btn-delete:hover {
-	background-color: #f8f8f8;
-}
-.source-list .source-list-item .btn-delete:active {
 	background-color: #f3f3f3;
 }
-.source-list .source-list-item textview {
-	line-height: 48px;
+.source-list .source-list-item .btn-delete:active {
+	background-color: #eee;
 }
 .source-list .source-list-item .icon {
 	font-size: 24px;
 	padding: 0 8px;
 	width: 24px;
 	display: inline-block;
-}
-.source-list .source-list-item .text {
-	display: inline-block;
+	vertical-align: middle;
 }
 .file-list {
 	width: 100%;
@@ -297,4 +298,87 @@ textview {
 	background-color: #fff;
 	width: 100%;
 	height: 100%;
+}
+
+.test-window {
+	width: 100%;
+	hegiht: 100%:
+	background-color: #fff;
+}
+.test-box {
+	margin: 50px;
+	width: 320px;
+	height: 240px:
+	background-color: #000;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.dialog {
+	background-color: rgba(0,0,0,0.5);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.dialog-content {
+	width: 100%;
+	padding: 25px;
+	vertical-align: middle;
+	background-color: #fff;
+	max-width: 450px;
+	margin: 0 auto;
+	box-sizing: border-box;
+}
+.dialog-content .dialog-header {
+	margin-bottom: 20px;
+	width: 100%;
+}
+.dialog-content .dialog-body {
+	margin-bottom: 20px;
+	width: 100%;
+}
+.dialog-content .dialog-header textview {
+	font-size: 18px;
+}
+.dialog-content .dialog-body textview {
+	font-size: 14px;
+	width: 100%;
+}
+.dialog-content .dialog-btn {
+	width: 100%;
+	height: 30px;
+	border: 1px sold #e00;
+}
+.dialog-content .dialog-footer {
+	width: 100%;
+}
+.dialog-content .dialog-btn-group {
+	width: 50%;
+	height: 30px;
+	display: inline-block;
+	padding: 0 4px;
+	box-sizing: border-box;
+}
+.dialog-content .dialog-btn-group:first-child {
+	padding-left: 0;
+}
+.dialog-content .dialog-btn-group:last-child {
+	padding-right: 0;
+}
+.dialog-content .dialog-btn {
+	background-color: #ddd;
+	box-sizing: border-box;
+	border: 2px solid #ddd;
+}
+.dialog-content .dialog-btn:hover {
+	border: 2px solid #aaa;
+}
+.dialog-content .dialog-btn:active {
+	background-color: #aaa;
+}
+.dialog-content .dialog-btn textview {
+	width: 100%;
+	text-align: center;
+	line-height: 30px;
 }
