--- a/res/ui.css
+++ b/res/ui.css
@@ -74,7 +74,7 @@
 .view .view-body {
 	height: 100%;
 	width: 100%;
-	padding: 48px 0 0 20px;
+	padding: 48px 0 0 0;
 	box-sizing: border-box;
 }
 .view .view-content-wrapper {
@@ -83,11 +83,10 @@
 }
 .view .view-content {
 	width: 100%;
-	padding: 15px 20px 0 0;
+	padding: 15px 25px 0 25px;
 	box-sizing: border-box;
 }
 .view .item-group {
-	padding: 0 10px;
 	margin: 0 0 15px 0;
 	box-sizing: border-box;
 	width: 100%;
@@ -101,7 +100,7 @@
 	font-size: 20px;
 	line-height: 32px;
 	height: 32px;
-	margin: 0 0 10px 10px;
+	margin: 0 0 10px 0;
 }
 .view-navbar .view-navbar-btn {
 	height: 48px;
@@ -118,7 +117,7 @@
 	text-align: center;
 }
 .source-list {
-	margin: 0 0 15px 0;
+	margin: 0 0 15px -10px;
 }
 .source-list .source-list-item {
 	width: 340px;
@@ -266,7 +265,7 @@
 	width: 100%;
 	display: none;
 	position: absolute;
-	padding: 5px 15px 0 15px;
+	padding: 10px 25px 0 25px;
 	background-color: #fff;
 }
 .folder-info-box-name {
@@ -279,7 +278,7 @@
 	padding-top: 130px;
 }
 .show-folder-info-box .view-content {
-	padding-top: 10px;
+	padding-top: 20px;
 }
 .show-folder-info-box .folder-info-box {
 	display: block;
@@ -432,19 +431,32 @@ textview {
 	z-index: 10;
 	position: absolute;
 }
+#picture-viewer-window .window-navbar {
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 48px;
+	position: absolute;
+	background-color: rgba(255,255,255,0.6);
+}
 #picture-viewer-window .picture-option-group {
 	position: absolute;
 	right: 10px;
 	bottom: 10px;
+	border: 1px solid #eee;
 }
 #picture-viewer-window .window-body,
 #picture-viewer-window .picture-container {
 	width: 100%;
 	height: 100%;
 }
+#picture-viewer-window .picture-container {
+	background-position: center;
+	background-size: auto;
+}
 #picture-viewer-window .picture-option-btn {
 	display: inline-block;
-	background-color: rgba(0,0,0,0.1);
+	background-color: rgba(255,255,255,0.6);
 }
 #picture-viewer-window .picture-option-btn .icon {
 	color: #444;
@@ -455,14 +467,43 @@ textview {
 	text-align: center;
 }
 #picture-viewer-window .picture-option-btn:hover {
-	background-color: rgba(0,0,0,0.2);
+	background-color: #fff;
 }
 #picture-viewer-window .picture-option-btn:active {
-	background-color: rgba(0,0,0,0.3);
+	background-color: #f0f0f0;
 }
 #picture-viewer-window .contain-mode {
 	background-size: contain;
 	background-position: center;
+}
+#picture-viewer-window .window-navbar-btn .icon {
+	color: #444;
+	width: 48px;
+	height: 48px;
+	font-size: 24px;
+	line-height: 48px;
+	text-align: center;
+}
+#picture-viewer-window .window-navbar-btn:hover {
+	background-color: #fff;
+}
+#picture-viewer-window .window-navbar-btn:active {
+	background-color: #f0f0f0;
+}
+#picture-viewer-window .window-navbar-btn {
+	display: inline-block;
+}
+#picture-loading-tip {
+	margin: 0 auto;
+	padding: 6px 15px;
+	position: absolute;
+	vertical-align: middle;
+	background-color: rgba(255,255,255,0.8);
+}
+#picture-loading-tip textview {
+	color: #333;
+	font-size: 14px;
+	line-height: 48px;
 }
 
 #test-widget {
