--- a/res/ui.css
+++ b/res/ui.css
@@ -69,7 +69,7 @@
 	height: 48px;
 	position: absolute;
 	background-color: #fafafa;
-	box-shadow: 0 0 3px rgba(0,0,0,0.6);
+	box-shadow: 0px 0px 4px rgba(0,0,0,0.6);
 }
 .view .view-body {
 	height: 100%;
@@ -213,6 +213,7 @@
 	background-position: top center;
 	box-sizing: border-box;
 	background-size: cover;
+	background-color: #eee;
 }
 .file-list .file-list-item-picture .picture-cover {
 	top: 0;
@@ -346,6 +347,16 @@ textview {
 }
 .btn-default:active {
 	background-color: #aaa;
+}
+.disabled,
+.disabled:hover,
+.disabled:active {
+	background-color: #eee;
+}
+.disabled textview,
+.disabled:hover textview,
+.disabled:active textview {
+	color: #ccc;
 }
 .btn-group .btn {
 	display: inline-block;
