--- a/res/ui.css
+++ b/res/ui.css
@@ -526,41 +526,44 @@ textview {
 	line-height: 48px;
 }
 
-#test-widget {
-	width: 100px;
-	height: 100px;
-	background-color: #ddd;
+#picture-info-panel {
+	width: 320px;
+	background-color: #fff;
 	position: absolute;
+	z-index: 10;
+	height: 100%;
+	top: 0;
+	left: 0;
+	box-shadow: 0 0 8px rgba(0,0,0,0.5);
 }
-.test-box-root {
-	padding: 10px;
-	background-color: #fff;
-	border: 1px solid #ddd;
-	width: 500px;
-	height: 500px;
+#picture-info-panel .info-item {
+	margin-bottom: 20px;
 }
-.test-box-1 {
-	margin-left: 50px;
-	margin-top: 50px;
-	width: 300px;
-	height: 300px;
-	background-color: #fff;
-	border: 1px solid #ddd;
+#picture-info-panel .info-item:last-child {
+	margin-bottom: 0;
 }
-.test-box-1 {
-	margin-left: 50px;
-	margin-top: 50px;
-	width: 300px;
-	height: 300px;
-	background-color: #fff;
-	border: 1px solid #ddd;
+#picture-info-panel .info-item .info-item-name {
+	color: #888;
 }
-
-.test-box-2 {
-	margin-left: 50px;
-	margin-top: 50px;
-	width: 100px;
-	height: 100px;
-	background-color: #f00;
-	border: 1px solid #ddd;
+.panel .panel-header {
+	width: 100%;
+	height: 48px;
+	border-bottom: 1px solid #eee;
+}
+.panel .panel-content {
+	padding: 20px;
+}
+.panel .panel-header .panel-header-title {
+	font-size: 16px;
+	line-height: 48px;
+	padding: 0 0 0 20px;
+}
+.panel .panel-header .btn {
+	height: 48px;
+	padding: 15px;
+}
+.panel .panel-header .btn textview {
+	padding: 0;
+	text-align: center;
+	line-height: 18px;
 }
