--- a/res/ui.css
+++ b/res/ui.css
@@ -562,6 +562,9 @@ textview {
 	height: 48px;
 	padding: 15px;
 }
+.panel .panel-header .btn:last-child {
+	margin-right: 5px;
+}
 .panel .panel-header .btn textview {
 	padding: 0;
 	text-align: center;
