--- a/res/ui-skin.css
+++ b/res/ui-skin.css
@@ -81,15 +81,21 @@
 .skin-light-green .file-list .file-list-item-folder:hover {
 	border-color: #44BB55;
 }
-.skin-light-green .dialog-input:focus {
-	box-shadow: 0 0 6px rgba(68,187,85,0.4);
-	border-color: #44BB55;
-}
 .skin-light-green .file-list .file-list-item-picture .picture-cover:hover {
 	top: 0;
 	left: 0; 
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	border: 2px solid rgba(68,187,85,0.8);
+	border: 2px solid rgba(68,187,85,0.6);
+}
+.skin-light-green .tag-thumb-list-item-checkbox {
+	color: #44BB55;
+}
+.skin-light-green .tag-thumb-list-item-cover {
+	border: 2px solid #44BB55;
+}
+.skin-light-green textedit:focus {
+	box-shadow: 0 0 6px rgba(68,187,85,0.4);
+	border-color: #44BB55;
 }
