--- a/res/ui.css
+++ b/res/ui.css
@@ -618,3 +618,97 @@ textedit.dialog-input {
 .tag-list-item .btn-delete:active {
 	color: #888;
 }
+.tag-thumb-list {
+	width: 100%;
+}
+.tag-thumb-list-item {
+	min-width: 160px;
+	min-height: 140px;
+	display: inline-block;
+	margin: 0 10px 10px 0;
+	background-color: #f0f0f0;
+	background-size: cover;
+	border: 1px solid #eee;
+}
+.tag-thumb-list-item-info {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	min-height: 24px;
+	padding: 5px 10px;
+	box-sizing: border-box;
+	background-color: rgba(0,0,0,0.4);
+}
+.tag-thumb-list-item-cover {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	border: 1px solid #ccc;
+	background-color: rgba(255,255,255,0.8);
+}
+.tag-thumb-list-item-checkbox {
+	display: none;
+	position: absolute;
+	font-size: 48px;
+	color: #888;
+	text-align: center;
+	vertical-align: middle;
+	width: 100%;
+}
+.tag-thumb-list-item .mdi-checkbox-marked {
+	display: none;
+}
+.tag-thumb-list-item:hover .tag-thumb-list-item-cover {
+	display: block;
+}
+thumbviewitem.selected .tag-thumb-list-item-checkbox {
+	display: block;
+}
+thumbviewitem.selected .tag-thumb-list-item-cover {
+	display: block;
+}
+.tag-thumb-list-item-info textview {
+	color: #fff;
+	line-height: 18px;
+	display: inline-block;
+}
+.tag-thumb-list-item-info .count {
+	position: absolute;
+	right: 10px;
+	top: 5px;
+}
+.search-panel {
+	padding: 0 15px;
+	width: 100%;
+	box-sizing: border-box;
+	position: absolute;
+	top: 50px;
+	left: 0;
+}
+.search-panel .search-input-group {
+	width: 100%;
+	box-sizing: border-box;
+	padding: 10px 77px 10px 10px;
+}
+.search-panel .search-input-group .search-input {
+	width: 100%;
+	padding: 10px;
+	z-index: 1;
+}
+.search-panel .search-input-group .btn {
+	position: absolute;
+	right: 0;
+	top: 10px;
+	height: 40px;
+	box-sizing: border-box;
+	z-index: 0;
+}
+
+#view-search .view-body {
+	padding-top: 110px;
+}
