--- a/res/ui-skin.css
+++ b/res/ui-skin.css
@@ -49,7 +49,8 @@
 }
 .skin-light-green .sidebar .active,
 .skin-light-green .sidebar .active:hover {
-	background-color: #44BB55;
+	//background-color: #44BB55;
+	background-color: rgba(68,187,85,0.8);
 }
 .skin-light-green .sidebar .active:hover textview {
 	color: #fff;
@@ -87,7 +88,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	border: 2px solid rgba(68,187,85,0.6);
+	border: 2px solid #44BB55;
 }
 .skin-light-green .tag-thumb-list-item-checkbox {
 	color: #44BB55;
