--- a/res/ui.css
+++ b/res/ui.css
@@ -120,6 +120,9 @@
 	width: 48px;
 	text-align: center;
 }
+.view-navbar .view-navbar-title {
+	display: inline-block;
+}
 .source-list {
 	margin: 0 0 15px -10px;
 }
@@ -713,4 +716,22 @@ thumbviewitem.selected .tag-thumb-list-item-cover {
 
 #view-search .view-body {
 	padding-top: 110px;
+}
+#view-search .subview .view-body {
+	padding-top: 48px;
+}
+#view-search-result .view-navbar-title {
+	border-left: 1px solid #373D3E;
+	padding-left: 15px;
+}
+.subview {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 48px;
+	background-color: #fff;	
+}
+.subview .view-navbar {
+	left: 0;
 }
