--- a/res/ui.css
+++ b/res/ui.css
@@ -334,6 +334,16 @@ textview {
 .btn {
 	padding: 8px 14px;
 }
+.btn textview {
+	line-height: 22px;
+}
+.btn:disabled {
+	background-color: #fff;
+	border: 1px solid #dedede;
+}
+.btn:disabled textview {
+	color: #7B7B7B;
+}
 .btn-link {
 	padding-left: 0;
 	padding-right: 0;
@@ -566,12 +576,27 @@ textedit.dialog-input {
 	color: #888;
 }
 .panel .panel-header {
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 48px;
+	position: absolute;
 	border-bottom: 1px solid #eee;
 }
+.panel .panel-body {
+	padding-top: 48px;
+	height: 100%;
+	width: 100%;
+	box-sizing: border-box;
+}
 .panel .panel-content {
-	padding: 20px;
+	padding: 20px 20px 0 20px;
+	width: 100%;
+	box-sizing: border-box;
+}
+.panel .panel-content-wrapper {
+	width: 100%;
+	height: 100%;
 }
 .panel .panel-header .panel-header-title {
 	font-size: 16px;
