--- a/res/ui-skin.css
+++ b/res/ui-skin.css
@@ -103,3 +103,6 @@
 .skin-light-green starrating .mdi-star {
 	color: #44A340;
 }
+.skin-light-green .view-content-wrapper progressbar {
+	background-color: #44A340;
+}
